demo/go-shiori/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: shiori
spec: {}
status: {}
