demo/go-shiori/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shiori
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /shiori
            pathType: Prefix
            backend:
              service:
                name: shiori
                port:
                  number: 8080
